--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a class="nav-item nav-link" href="#">Shop</a>
         <a class="nav-item nav-link" href="#">Contact</a>
         <div class="mx-2">
-          <a href="#"><img src="WhatsApp Image 2024-03-14 at 16.15.45_67942059.jpg" alt="" style="height: 15px;"></a>
+          <a href="#"><img src="./images/WhatsApp Image 2024-03-14 at 16.15.45_67942059.jpg" alt="" style="height: 15px;"></a>
           <a href="#"><i class="fa fa-solid fa-cart-plus ms-2" style="color: #000000;"></i></a>
           <a href="#"><i class="fa fa-solid fa-user ms-2
             " style="color: black;"></i></a>
@@ -54,15 +54,15 @@
   <div id="carouselExample" class="carousel slide w-100 " data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="WhatsApp Image 2024-03-14 at 16.15.45_870f0155.jpg" class="d-block w-100" alt="..." height="650px"
+        <img src="./images/WhatsApp Image 2024-03-14 at 16.15.45_870f0155.jpg" class="d-block w-100" alt="..." height="650px"
           style="object-fit: cover;">
       </div>
       <div class="carousel-item">
-        <img src="WhatsApp Image 2024-03-14 at 16.15.45_eb58afc3.jpg" class="d-block w-100" alt="..." height="650px"
+        <img src="./images/WhatsApp Image 2024-03-14 at 16.15.45_eb58afc3.jpg" class="d-block w-100" alt="..." height="650px"
           style="object-fit: cover;">
       </div>
       <div class="carousel-item">
-        <img src="WhatsApp Image 2024-03-14 at 16.15.46_574d46d6.jpg" class="d-block w-100" alt="..." height="650px"
+        <img src="./images/WhatsApp Image 2024-03-14 at 16.15.46_574d46d6.jpg" class="d-block w-100" alt="..." height="650px"
           style="object-fit: cover;">
       </div>
     </div>
@@ -80,7 +80,7 @@
 
       <div class="col-lg-3 col-md-4 col-sm-6">
         <div class="card" style="width: 18rem;">
-          <img src="WhatsApp Image 2024-03-14 at 16.15.45_67942059.jpg" height="286.4px" class="card-img-top" alt="...">
+          <img src="./images/WhatsApp Image 2024-03-14 at 16.15.45_67942059.jpg" height="286.4px" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -91,7 +91,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
         <div class="card" style="width: 18rem;">
-          <img src="WhatsApp Image 2024-03-14 at 16.15.45_870f0155.jpg" height="286.4px" class="card-img-top" alt="...">
+          <img src="./images/WhatsApp Image 2024-03-14 at 16.15.45_870f0155.jpg" height="286.4px" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -102,7 +102,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
         <div class="card" style="width: 18rem;">
-          <img src="WhatsApp Image 2024-03-14 at 16.15.45_eb58afc3.jpg" height="286.4px" class="card-img-top" alt="...">
+          <img src="./images/WhatsApp Image 2024-03-14 at 16.15.45_eb58afc3.jpg" height="286.4px" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -113,7 +113,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
         <div class="card" style="width: 18rem;">
-          <img src="WhatsApp Image 2024-03-14 at 16.15.46_574d46d6.jpg" class="card-img-top" alt="...">
+          <img src="./images/WhatsApp Image 2024-03-14 at 16.15.46_574d46d6.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
