--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </a>
       <div class="ms-auto ">
         <a href="#"><i class="fa fa-brands fa-facebook ms-2" style="color: white;"></i></a>
-        <a href="#"><i class="fa fa-brands fa-instagram ms-2" style="color: white;"></i></a>
+        <a href="https://www.instagram.com/accounts/login/?hl=en"><i class="fa fa-brands fa-instagram ms-2" style="color: white;"></i></a>
         <a href="#"><i class="fa fa-brands fa-twitter ms-2" style="color: white;"></i></a>
         <a href="#"><i class="fa fa-brands fa-linkedin ms-2" style="color: white;"></i></a>
       </div>
